# LSAP-1

./: .env.example  .gitignore  DESIGN.md  PROGRESS.md  README.md  ROADMAP.md  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/scripts/: corpus_specs.json  engine_ab.py  fit_projection.py  generate_corpus.py  ingest_public_domain.py  rate_corpus.py
backend/src/lsap/: __init__.py  config.py  storage.py
backend/src/lsap/api/: __init__.py  app.py
backend/src/lsap/coordinates/: __init__.py  projection.py  reliability.py
backend/src/lsap/engine/: __init__.py  compiler.py  operators.yaml  presets.py  presets.yaml  runtime.py
backend/src/lsap/instrument/: __init__.py  axes.yaml  rater.py  schema.py
backend/tests/: test_cspace_endpoint.py  test_engine.py  test_engine_endpoint.py  test_firewall.py  test_health.py  test_projection.py  test_rate_endpoint.py  test_rater.py  test_reliability.py  test_schema.py  test_storage.py
coordinates/: model.json
corpus/: absurd-bureau.md  alibi-vase.md  allotment-notes.md  aphorism-table.md  aphorism-workshop.md  banter-trucks.md  baroque-memory.md  call-derby.md  caper-carousel.md  catalogue-estate.md  child-attic.md  chorus-pharmacy.md  chorus-pool.md  chronicle-bakery.md  coop-bicycles.md  cosmic-shore.md  counter-test.md  courtroom.md  crew-deck.md  crew-line.md  crow-market.md  deadpan-swan.md  disputation-tavern.md  dissolve-room.md  distant-swim.md  domestic-dinner.md  dream-house.md  duet-piano.md  elegy-orchard.md  elegy-station.md  encyclo-parlor.md  epic-lawn.md  eve-keys.md  fable-river.md  (+68 more)
(+126 files in other folders)
