[project]
name = "lsap"
version = "0.1.0"
description = "LSAP-1 — literary space annotation instrument + generative engine (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lsap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
